# DataStructures_A1

./: .gitignore  CMakeLists.txt
incl/: prime.hpp
src/: main.cpp  prime.cpp
tests/: test.cpp
